--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,185 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <nav class="navbar">
+        <h2><a href="#">OKFOOD</a></h2>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><button><a href="#">Sign Up</a></button></li>
+        </ul>
+    </nav>
+
+    <header class="header">
+        <div>
+            <h2>Good food makes a great day</h2>
+            <h3>intoducing OKFOOD, the best way to eat</h3>
+            <button><a href="#">Get Started</a></button>
+        </div>
+        <div>
+            <!--3 header imgs go here-->
+            <img src="<%=require('./images/header/pexels-kasumi-loffler-3535395.jpg')%>">
+            <img src="<%=require('./images/header/pexels-lisa-1279330.jpg')%>">
+            <img src="<%=require('./images/header/pexels-roger-cziwerny-792028.jpg')%>">
+        </div>
+    </header>
+
+    <section class="about-us">
+        <div>
+            <!--about us img here-->
+            <img src="<%=require('./images/about/divani-diva-s0duM7x1yuA-unsplash_a.png')%>">
+        </div>
+
+        <div>
+            <h3>ABOUT US</h3>
+            <h2>What's Special About This Website?</h2>
+            <p>We belive the key to are buisness is our customers and their trust.
+            That's why we never compromise on product quaility.
+             We have a team to check the quality all the time.
+            </p>
+        </div>
+    </section>
+
+    <section class="popular-dish">
+        <div>
+            <h3>POPULAR DISH</h3>
+            <h2>What's Trending?</h2>
+        </div>
+        <div>
+            <!--3 popular dish imgs here-->
+            <img src="<%=require('./images/popular-dish/lynda-hinton-77RJFb0IXnQ-unsplash_a.png')%>">
+            <img src="<%=require('./images/popular-dish/amirali-mirhashemian-jh5XyK4Rr3Y-unsplash_a.png')%>">
+            <img src="<%=require('./images/popular-dish/homescreenify-sA3wymYqyaI-unsplash_a.png')%>">
+        </div>
+    </section>
+
+    <section class="our-menu">
+        <h3>OUR MENU</h3>
+        <h2>Today's Menu</h2>
+        <div class="our-menu__menu-imgs">
+            <!--our menu imgs here-->
+            <img src="<%=require('./images/our-menu/melissa-walker-horn-gtDYwUIr9Vg-unsplash.jpg')%>">
+            <img src="<%=require('./images/our-menu/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg')%>">
+            <img src="<%=require('./images/our-menu/patrick-le-6HvDmcA0W1w-unsplash.jpg')%>">
+            <img src="<%=require('./images/our-menu/proriat-hospitality-lwoTuByIuC4-unsplash.jpg')%>">
+            <img src="<%=require('./images/our-menu/vitalii-chernopyskyi-Oxb84ENcFfU-unsplash.jpg')%>">
+        </div>
+    </section>
+
+    <section class="testimonials">
+        <h2>When Your Happy, We're Satisfied</h2>
+        <div class="testimonial__card">
+            <p class="testimonial__text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Deserunt earum reprehenderit, accusantium explicabo perferendis
+            nesciunt accusamus minus eos necessitatibus repudiandae molestias
+            facere libero nobis. Quia animi voluptates tempora
+            reiciendis repellendus?
+            </p>
+
+            <div class="testimonial__profile">
+                <div class="testimonial__profile__img-container">
+                    <img src="<%=require('./images/testimonial/jake-nackos-IF9TK5Uy-KI-unsplash.jpg')%>">
+                </div>
+                <div class="testimonial__profile__info">
+                    <h2>Jasmine Alatas</h2>
+                    <div class="testimonial__card__rating">
+                        <div class="rating__stars">
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
+                        </div>
+                        <div class="rating__score">4.0</div>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial__profile">
+                <div class="testimonial__profile__img-container">
+                    <img src="<%=require('./images/testimonial/luis-villasmil-hh3ViD0r0Rc-unsplash.jpg')%>">
+                </div>
+                <div class="testimonial__profile__info">
+                    <h2>John Smith</h2>
+                    <div class="testimonial__card__rating">
+                        <div class="rating__stars">
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                            <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
+                        </div>
+                        <div class="rating__score">4.0</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="newsletter-section">
+        <div class="newsletter">
+            <h2>Sign-up for our newsletter to get 10% off!</h2>
+            <form action="">
+                <input type="text" placeholder="Your email address">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <!--stuff here, copyright I think-->
+        <div>
+            <div>
+                <h2>OKFOOD</h2>
+                <div>123 county Road B3 West, Lyons, Ks 67891</div>
+                <div class="social-links">
+                    <!--social meida icon links here(facebook, twitter,instagram)-->
+                        <a href="#">
+                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                </div>
+            </div>
+
+            <div class="footer__site-links">
+                <ul class="site-links__product">
+                    <li><h2>Product</h2></li>
+                    <li>Login</li>
+                    <li>Overview</li>
+                    <li>Features</li>
+                    <li>Action items</li>
+                    <li>Feedback</li>
+                </ul>
+                <ul class="site-links__legal">
+                    <li><h2>Legal</h2></li>
+                    <li>Copyright</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms</li>
+                    <li>Security</li>
+                    <li>Report a violation</li>
+                </ul>
+                <ul class="site-links__company">
+                    <li><h2>Company</h2></li>
+                    <li>Pricing</li>
+                    <li>Security</li>
+                    <li>Terms of Use</li>
+                    <li>Careers</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+        </div>
+
+        <div>Copyright All Right Reserved OKFOOD</div>
+    </footer>
 </body>
 
 <script src="../src/index.js"></script>
