--- a/src/index.html
+++ b/src/index.html
@@ -9,181 +9,215 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <h2 class="navbar__heading"><a href="#">OKFOOD</a></h2>
-        <ul class="navbar__links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">MENU</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><button class="sign-up-btn"><a href="#">Sign Up</a></button></li>
-        </ul>
-    </nav>
+    <div class="app">
+        <nav class="navbar">
+            <h2 class="navbar__heading"><a href="#">OKFOOD</a></h2>
+            <ul class="navbar__links">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><button class="sign-up-btn"><a href="#">Sign Up</a></button></li>
+            </ul>
+        </nav>
 
-    <header class="header">
-        <div class="header__info">
-            <h2>Good Food Makes <div>a Great Day</div></h2>
-            <h3>Introducing OKFOOD, The best way to eat.<div>Order in store or online today!</div></h3>
-            <button class="get-started-btn"><a href="#">Get Started</a></button>
-        </div>
-        <div class="header__imgs">
-            <img class="header__imgs__img-1" src="<%=require('./images/header/pexels-kasumi-loffler-3535395.jpg')%>">
-            <img class="header__imgs__img-2" src="<%=require('./images/header/pexels-roger-cziwerny-792028.jpg')%>">
-            <img class="header__imgs__img-3" src="<%=require('./images/header/pexels-lisa-1279330.jpg')%>">
-        </div>
-    </header>
+        <header class="header">
+            <div class="header__info">
+                <h2>Good Food Makes <div>a Great Day</div></h2>
+                <h3>Introducing OKFOOD, The best way to eat.<div>Order in store or online today!</div></h3>
+                <button class="get-started-btn"><a href="#">Get Started</a></button>
+            </div>
+            <div class="header__imgs">
+                <img class="header__imgs__img-1" src="<%=require('./images/header/pexels-kasumi-loffler-3535395.jpg')%>">
+                <img class="header__imgs__img-2" src="<%=require('./images/header/pexels-roger-cziwerny-792028.jpg')%>">
+                <img class="header__imgs__img-3" src="<%=require('./images/header/pexels-lisa-1279330.jpg')%>">
+            </div>
+        </header>
 
-    <section class="about-us">
-        <div class="about-us__img-container">
-            <img class="about-us__img" src="<%=require('./images/about/divani-diva-s0duM7x1yuA-unsplash_a.png')%>">
-        </div>
-        <div class="about-us__info">
-            <h3 class="about-us__info__heading">ABOUT US</h3>
-            <h2 class="about-us__info__subheading">What's Special About This Website?</h2>
-            <p class="about-us__info__text">We belive the key to are buisness is our customers and their trust.
-            That's why we never compromise on product quaility.
-             We have a team to check the quality all the time.
-            </p>
-        </div>
-    </section>
+        <section class="about-us">
+            <div class="about-us__img-container">
+                <img class="about-us__img" src="<%=require('./images/about/divani-diva-s0duM7x1yuA-unsplash_a.png')%>">
+            </div>
+            <div class="about-us__info">
+                <h3 class="about-us__info__heading">ABOUT US</h3>
+                <h2 class="about-us__info__subheading">What's Special About This Website?</h2>
+                <p class="about-us__info__text">
+                We believe the key to our business is our customers and their trust.
+                That's why we never compromise on product quality.
+                We have a team to check the quality all the time.
+                </p>
+            </div>
+        </section>
 
-    <section class="popular-dish">
-        <div>
-            <h3>POPULAR DISH</h3>
-            <h2>What's Trending?</h2>
-        </div>
-        <div>
-            <!--3 popular dish imgs here-->
-            <img src="<%=require('./images/popular-dish/lynda-hinton-77RJFb0IXnQ-unsplash_a.png')%>">
-            <img src="<%=require('./images/popular-dish/amirali-mirhashemian-jh5XyK4Rr3Y-unsplash_a.png')%>">
-            <img src="<%=require('./images/popular-dish/homescreenify-sA3wymYqyaI-unsplash_a.png')%>">
-        </div>
-    </section>
-
-    <section class="our-menu">
-        <h3>OUR MENU</h3>
-        <h2>Today's Menu</h2>
-        <div class="our-menu__menu-imgs">
-            <!--our menu imgs here-->
-            <img src="<%=require('./images/our-menu/melissa-walker-horn-gtDYwUIr9Vg-unsplash.jpg')%>">
-            <img src="<%=require('./images/our-menu/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg')%>">
-            <img src="<%=require('./images/our-menu/patrick-le-6HvDmcA0W1w-unsplash.jpg')%>">
-            <img src="<%=require('./images/our-menu/proriat-hospitality-lwoTuByIuC4-unsplash.jpg')%>">
-            <img src="<%=require('./images/our-menu/vitalii-chernopyskyi-Oxb84ENcFfU-unsplash.jpg')%>">
-        </div>
-    </section>
-
-    <section class="testimonials">
-        <h2>When Your Happy, We're Satisfied</h2>
-        <div class="testimonial__card">
-            <p class="testimonial__text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Deserunt earum reprehenderit, accusantium explicabo perferendis
-            nesciunt accusamus minus eos necessitatibus repudiandae molestias
-            facere libero nobis. Quia animi voluptates tempora
-            reiciendis repellendus?
-            </p>
-
-            <div class="testimonial__profile">
-                <div class="testimonial__profile__img-container">
-                    <img src="<%=require('./images/testimonial/jake-nackos-IF9TK5Uy-KI-unsplash.jpg')%>">
-                </div>
-                <div class="testimonial__profile__info">
-                    <h2>Jasmine Alatas</h2>
-                    <div class="testimonial__card__rating">
-                        <div class="rating__stars">
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
-                        </div>
-                        <div class="rating__score">4.0</div>
+        <section class="popular-dish">
+            <div  class="popular-dish__titles">
+                <h3>POPULAR DISH</h3>
+                <h2>What's Trending?</h2>
+            </div>
+            <ul class="popular-dish__dishes">
+                <li class="popular-dish__dish">
+                    <img class="popular-dish__dish__img popular-dish__dish__img-1" src="<%=require('./images/popular-dish/lynda-hinton-77RJFb0IXnQ-unsplash_a.png')%>">
+                    <h2 class="popular-dish__dish__title">Pizza</h2>
+                    <div class="rating__stars">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
                     </div>
+                    <h3 class="popular-dish__dish__price">$13.00</h3>
+                </li>
+                <li class="popular-dish__dish">
+                    <img  class="popular-dish__dish__img popular-dish__dish__img-2" src="<%=require('./images/popular-dish/amirali-mirhashemian-jh5XyK4Rr3Y-unsplash_a.png')%>">
+                    <h2 class="popular-dish__dish__title">Hamburger</h2>
+                    <div class="rating__stars">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="popular-dish__dish__price">$12.00</h3>
+                </li>
+                <li class="popular-dish__dish">
+                    <img class="popular-dish__dish__img popular-dish__dish__img-3" src="<%=require('./images/popular-dish/homescreenify-sA3wymYqyaI-unsplash_a.png')%>">
+                    <h2 class="popular-dish__dish__title">Spaghetti</h2>
+                    <div class="rating__stars">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="popular-dish__dish__price">$13.50</h3>
+                </li>
+            </ul>
+        </section>
+
+        <section class="our-menu">
+            <h3>OUR MENU</h3>
+            <h2>Today's Menu</h2>
+            <div class="our-menu__menu-imgs">
+                <img class="our-menu__menu-img our-menu__menu-img-1" src="<%=require('./images/our-menu/melissa-walker-horn-gtDYwUIr9Vg-unsplash.jpg')%>">
+                <div class="square-imgs">
+                    <img class="our-menu__menu-img our-menu__menu-img-2 menu-img-square" src="<%=require('./images/our-menu/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg')%>">
+                    <img class="our-menu__menu-img our-menu__menu-img-3 menu-img-square" src="<%=require('./images/our-menu/patrick-le-6HvDmcA0W1w-unsplash.jpg')%>">
+                    <img class="our-menu__menu-img our-menu__menu-img-4 menu-img-square" src="<%=require('./images/our-menu/proriat-hospitality-lwoTuByIuC4-unsplash.jpg')%>">
+                    <img class="our-menu__menu-img our-menu__menu-img-5 menu-img-square" src="<%=require('./images/our-menu/vitalii-chernopyskyi-Oxb84ENcFfU-unsplash.jpg')%>">
                 </div>
             </div>
-            <div class="testimonial__profile">
-                <div class="testimonial__profile__img-container">
-                    <img src="<%=require('./images/testimonial/luis-villasmil-hh3ViD0r0Rc-unsplash.jpg')%>">
-                </div>
-                <div class="testimonial__profile__info">
-                    <h2>John Smith</h2>
-                    <div class="testimonial__card__rating">
-                        <div class="rating__stars">
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
-                            <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
+        </section>
+
+        <section class="testimonials">
+            <h2>When Your Happy, We're Satisfied</h2>
+            <div class="testimonial__card">
+                <p class="testimonial__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt earum reprehenderit, accusantium explicabo perferendis
+                nesciunt accusamus minus eos necessitatibus repudiandae molestias
+                facere libero nobis. Quia animi voluptates tempora
+                reiciendis repellendus?
+                </p>
+
+                <div class="testimonial__profile">
+                    <img class="testimonial__profile__img" src="<%=require('./images/testimonial/jake-nackos-IF9TK5Uy-KI-unsplash.jpg')%>">
+                    <div class="testimonial__profile__info">
+                        <h2>Jasmine Alatas</h2>
+                        <div class="testimonial__card__rating">
+                            <div class="rating__stars">
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
+                            </div>
+                            <div class="rating__score">4.0</div>
                         </div>
-                        <div class="rating__score">4.0</div>
                     </div>
                 </div>
+                <!-- <div class="testimonial__profile">
+                    <div class="testimonial__profile__img-container">
+                        <img src="<%=require('./images/testimonial/luis-villasmil-hh3ViD0r0Rc-unsplash.jpg')%>">
+                    </div>
+                    <div class="testimonial__profile__info">
+                        <h2>John Smith</h2>
+                        <div class="testimonial__card__rating">
+                            <div class="rating__stars">
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:rgb(241, 204, 36);"></i>
+                                <i class="fa fa-star" aria-hidden="true" style="color:#fff;"></i>
+                            </div>
+                            <div class="rating__score">4.0</div>
+                        </div>
+                    </div>
+                </div> -->
+
             </div>
+        </section>
 
-        </div>
-    </section>
+        <section class="newsletter-section">
+            <div class="newsletter">
+                <h2>Sign-up for our newsletter to get 10% off!</h2>
+                <form action="">
+                    <input type="text" placeholder="Your email address">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </section>
 
-    <section class="newsletter-section">
-        <div class="newsletter">
-            <h2>Sign-up for our newsletter to get 10% off!</h2>
-            <form action="">
-                <input type="text" placeholder="Your email address">
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <!--stuff here, copyright I think-->
-        <div>
+        <footer class="footer">
+            <!--stuff here, copyright I think-->
             <div>
-                <h2>OKFOOD</h2>
-                <div>123 county Road B3 West, Lyons, Ks 67891</div>
-                <div class="social-links">
-                    <!--social meida icon links here(facebook, twitter,instagram)-->
-                        <a href="#">
-                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
+                <div>
+                    <h2>OKFOOD</h2>
+                    <div>123 county Road B3 West, Lyons, Ks 67891</div>
+                    <div class="social-links">
+                        <!--social meida icon links here(facebook, twitter,instagram)-->
+                            <a href="#">
+                                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                    </div>
+                </div>
+
+                <div class="footer__site-links">
+                    <ul class="site-links__product">
+                        <li><h2>Product</h2></li>
+                        <li>Login</li>
+                        <li>Overview</li>
+                        <li>Features</li>
+                        <li>Action items</li>
+                        <li>Feedback</li>
+                    </ul>
+                    <ul class="site-links__legal">
+                        <li><h2>Legal</h2></li>
+                        <li>Copyright</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms</li>
+                        <li>Security</li>
+                        <li>Report a violation</li>
+                    </ul>
+                    <ul class="site-links__company">
+                        <li><h2>Company</h2></li>
+                        <li>Pricing</li>
+                        <li>Security</li>
+                        <li>Terms of Use</li>
+                        <li>Careers</li>
+                        <li>Contact Us</li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="footer__site-links">
-                <ul class="site-links__product">
-                    <li><h2>Product</h2></li>
-                    <li>Login</li>
-                    <li>Overview</li>
-                    <li>Features</li>
-                    <li>Action items</li>
-                    <li>Feedback</li>
-                </ul>
-                <ul class="site-links__legal">
-                    <li><h2>Legal</h2></li>
-                    <li>Copyright</li>
-                    <li>Privacy Policy</li>
-                    <li>Terms</li>
-                    <li>Security</li>
-                    <li>Report a violation</li>
-                </ul>
-                <ul class="site-links__company">
-                    <li><h2>Company</h2></li>
-                    <li>Pricing</li>
-                    <li>Security</li>
-                    <li>Terms of Use</li>
-                    <li>Careers</li>
-                    <li>Contact Us</li>
-                </ul>
-            </div>
-        </div>
-
-        <div>Copyright All Right Reserved OKFOOD</div>
-    </footer>
+            <div>Copyright All Right Reserved OKFOOD</div>
+        </footer>
+    </div>
 </body>
 
 <script src="../src/index.js"></script>
