--- a/src/index.html
+++ b/src/index.html
@@ -174,54 +174,52 @@
         </section>
 
         <footer class="footer">
-            <!--stuff here, copyright I think-->
-            <div>
-                <div>
-                    <h2>OKFOOD</h2>
-                    <div>123 county Road B3 West, Lyons, Ks 67891</div>
+            <div class="footer__inner">
+                <div class="footer__info">
+                    <h2 class="footer__info__logo">OKFOOD</h2>
+                    <div class="footer__info__location">123 county Road B3 West, Lyons, Ks 67891</div>
                     <div class="social-links">
-                        <!--social meida icon links here(facebook, twitter,instagram)-->
-                            <a href="#">
+                            <a class="social-links__link" href="#">
                                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
                             </a>
-                            <a href="#">
+                            <a class="social-links__link" href="#">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
                             </a>
-                            <a href="#">
+                            <a class="social-links__link" href="#">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                     </div>
                 </div>
 
-                <div class="footer__site-links">
-                    <ul class="site-links__product">
+                <div class="footer__site-links-container">
+                    <ul class="footer__site-links">
                         <li><h2>Product</h2></li>
-                        <li>Login</li>
-                        <li>Overview</li>
-                        <li>Features</li>
-                        <li>Action items</li>
-                        <li>Feedback</li>
+                        <li><a href="">Login</a></li>
+                        <li><a href="#">Overview</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Action items</a></li>
+                        <li><a href="#">Feedback</a></li>
                     </ul>
-                    <ul class="site-links__legal">
+                    <ul class="footer__site-links">
                         <li><h2>Legal</h2></li>
-                        <li>Copyright</li>
-                        <li>Privacy Policy</li>
-                        <li>Terms</li>
-                        <li>Security</li>
-                        <li>Report a violation</li>
+                        <li><a href="#">Copyright</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Report a violation</a></li>
                     </ul>
-                    <ul class="site-links__company">
+                    <ul class="footer__site-links">
                         <li><h2>Company</h2></li>
-                        <li>Pricing</li>
-                        <li>Security</li>
-                        <li>Terms of Use</li>
-                        <li>Careers</li>
-                        <li>Contact Us</li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div>Copyright All Right Reserved OKFOOD</div>
+            <div class="copyright-notice">Copyright &copy; 2021 All Rights Reserved OKFOOD</div>
         </footer>
     </div>
 </body>
