--- a/src/index.html
+++ b/src/index.html
@@ -193,28 +193,28 @@
 
                 <div class="footer__site-links-container">
                     <ul class="footer__site-links">
-                        <li><h2>Product</h2></li>
-                        <li><a href="">Login</a></li>
-                        <li><a href="#">Overview</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Action items</a></li>
-                        <li><a href="#">Feedback</a></li>
+                        <li class="site-link__header-link"><h2>Product</h2></li>
+                        <li class="site-links__link x"><a href="">Login</a></li>
+                        <li class="site-links__link"><a href="#">Overview</a></li>
+                        <li class="site-links__link"><a href="#">Features</a></li>
+                        <li class="site-links__link"><a href="#">Action items</a></li>
+                        <li class="site-links__link"><a href="#">Feedback</a></li>
                     </ul>
                     <ul class="footer__site-links">
-                        <li><h2>Legal</h2></li>
-                        <li><a href="#">Copyright</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Security</a></li>
-                        <li><a href="#">Report a violation</a></li>
+                        <li class="site-link__header-link"><h2>Legal</h2></li>
+                        <li class="site-links__link"><a href="#">Copyright</a></li>
+                        <li class="site-links__link"><a href="#">Privacy Policy</a></li>
+                        <li class="site-links__link"><a href="#">Terms</a></li>
+                        <li class="site-links__link"><a href="#">Security</a></li>
+                        <li class="site-links__link"><a href="#">Report a violation</a></li>
                     </ul>
                     <ul class="footer__site-links">
-                        <li><h2>Company</h2></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Security</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li class="site-link__header-link"><h2>Company</h2></li>
+                        <li class="site-links__link"><a href="#">Pricing</a></li>
+                        <li class="site-links__link"><a href="#">Security</a></li>
+                        <li class="site-links__link"><a href="#">Terms of Use</a></li>
+                        <li class="site-links__link"><a href="#">Careers</a></li>
+                        <li class="site-links__link"><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
