--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#">CONTACT</a></li>
                 <li><button class="sign-up-btn"><a href="#">Sign Up</a></button></li>
             </ul>
+            <button class="navbar-btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </nav>
 
         <header class="header">
@@ -198,7 +199,6 @@
                             </a>
                     </div>
                 </div>
-
                 <div class="footer__site-links-container">
                     <ul class="footer__site-links">
                         <li class="site-link__header-link"><h2>Product</h2></li>
@@ -226,9 +226,9 @@
                     </ul>
                 </div>
             </div>
-
             <div class="copyright-notice">Copyright &copy; 2021 All Rights Reserved OKFOOD</div>
         </footer>
+
     </div>
 </body>
 
